--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-test
+<!doctype html>
+<html lang="kr">
+  <head>
+    <meta charset="utf-8">
+    <title>My note</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="lib/summernote-bs3.css">
+    <link rel="stylesheet" href="lib/summernote.css">
+    <link rel="stylesheet" href="src/app.css?v=1.0">
+  </head>
+  <body>
+  <div id="all">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">My note</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+<!--            <li id="new-note" onclick="clickNewnote();"><a href="#">New note</a></li>
+            <li id="view-fullscreen" onclick="clickFullscreen();"><a href="#">Fullscreen</a></li>
+            <li id="cancel-fullscreen" onclick="cancleFullscreen();"><a href="#">Cancle fullscreen</a></li>
+            <li id="htmloptions"><a href="#">Save as</a></li>-->
+            <li><a href="#" data-toggle="modal" data-target="#aboutModal">About</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+    <div class="container">
+      <div class="wrap">
+<!--        <p>Fullscreen state: I'm <b id="fullscreen-state">not </b>fullscreen</p>
+        <select id="listSelect" class="form-control">
+        </select>-->
+        <div id="contents">
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          2012104137 컴퓨터교육과 서민기 기말고사 과제입니다.
+        </div>
+      </div>
+    </div>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="lib/summernote.min.js"></script>
+    <script src="src/html-editor.js"></script>
+    <script src="src/app.js"></script>
+    <script src="src/button.js"></script>
+    <!--<script src="src/base.js"></script>-->
+    <!--<script src="src/demo.js"></script>-->
+    <script async="" src="https://rawgithub.com/eligrey/FileSaver.js/master/FileSaver.js"></script>
+    <script async="" src="https://rawgithub.com/eligrey/Blob.js/master/Blob.js"></script>
+    <script async="" src="https://rawgithub.com/eligrey/canvas-toBlob.js/master/canvas-toBlob.js"></script>
+  </div>
+  </body>
+</html>
