--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="lib/summernote-bs3.css">
     <link rel="stylesheet" href="lib/summernote.css">
+    <link rel="stylesheet" href="src/app.css?v=1.0">
   </head>
   <body>
   <div id="all">
