--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-<!--            <li id="new-note" onclick="clickNewnote();"><a href="#">New note</a></li>
-            <li id="view-fullscreen" onclick="clickFullscreen();"><a href="#">Fullscreen</a></li>
-            <li id="cancel-fullscreen" onclick="cancleFullscreen();"><a href="#">Cancle fullscreen</a></li>
-            <li id="htmloptions"><a href="#">Save as</a></li>-->
+            <li onclick="clickNewnote();"><a href="#">New note</a></li>
+            <li onclick="clickToggleFullscreen();"><a href="#" id="fullscreen">Fullscreen</a></li>
+            <!--<li id="cancel-fullscreen"><a href="#">Cancle fullscreen</a></li>-->
+            <li onclick="clickSaveHTML();"><a href="#">Save as</a></li>
             <li><a href="#" data-toggle="modal" data-target="#aboutModal">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -39,7 +39,7 @@
       <div class="wrap">
 <!--        <p>Fullscreen state: I'm <b id="fullscreen-state">not </b>fullscreen</p>
         <select id="listSelect" class="form-control">
-        </select>-->
+        </select> -->
         <div id="contents">
         </div>
       </div>
@@ -57,8 +57,6 @@
     <script src="src/html-editor.js"></script>
     <script src="src/app.js"></script>
     <script src="src/button.js"></script>
-    <!--<script src="src/base.js"></script>-->
-    <!--<script src="src/demo.js"></script>-->
     <script async="" src="https://rawgithub.com/eligrey/FileSaver.js/master/FileSaver.js"></script>
     <script async="" src="https://rawgithub.com/eligrey/Blob.js/master/Blob.js"></script>
     <script async="" src="https://rawgithub.com/eligrey/canvas-toBlob.js/master/canvas-toBlob.js"></script>
